--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -50,15 +50,15 @@ rules = (
     inactive-opacity = 0.85;
   },
   {
-    match = "window_type = 'dock' || class_g = 'Polybar' || class_g = 'slop'";
+    match = "window_type = 'dock' || class_g = 'slop'";
     shadow = false;
     blur-background = false;
     inactive-opacity = 1.0;
     animations = ({ preset = "none"; });
   },
   {
-    match = "class_g = 'Dunst' || class_g = 'Rofi'";
-    opacity = 0.85;
+    match = "class_g = 'Dunst' || class_g = 'Rofi' || class_g = 'Polybar'";
+    opacity = 0.89;
     shadow = false;
     blur-background = true;
   }
