--- a/cava/config
+++ b/cava/config
@@ -14,15 +14,14 @@ method = ncurses
 
 [color]
 gradient = 1
-
 gradient_count = 8
 gradient_color_1 = '#7aa2f7'
-gradient_color_2 = '#7dcfff'
-gradient_color_3 = '#73daca'
-gradient_color_4 = '#b4f9f8'
-gradient_color_5 = '#bb9af7'
-gradient_color_6 = '#9d7cd8'
-gradient_color_7 = '#ff007c'
+gradient_color_2 = '#7bc6ff'
+gradient_color_3 = '#7dcfff'
+gradient_color_4 = '#2ac3de'
+gradient_color_5 = '#73daca'
+gradient_color_6 = '#bb9af7'
+gradient_color_7 = '#c678dd'
 gradient_color_8 = '#f7768e'
 
 [smoothing]
